Added all fixes after the review. Also implemented is a custom search for books by author, title and price level using the Map interface.